--- a/discount/markdown.1
+++ b/discount/markdown.1
@@ -15,7 +15,9 @@
 .Op Fl C Ar prefix
 .Op Fl F Pa bitmap
 .Op Fl f Ar flags
+.Op Fl n
 .Op Fl o Pa file
+.Op Fl S
 .Op Fl s Pa text
 .Op Fl t Pa text
 .Op Pa textfile
@@ -104,9 +106,27 @@ blocks.
 .It Ar alphalist
 Allow alphabetic lists.
 .It Ar definitionlist
-Allow definition lists.
+Allow definition lists at all (default). Use
+.Em dldiscount
+and
+.Em dlextra
+to control which syntaxes are respected.
+.It Ar dldiscount
+Enable discount-style definition lists (default).
+.It Ar dlextra
+Enable extra-style definition lists (not default). Both styles may be enabled simultaneously.
 .It Ar footnote
 Allow markdown extra-style footnotes.
+.It Ar style
+Extract <style> blocks from the output.
+.It Ar fencedcode
+Allow fenced code blocks (not default).
+.It Ar idanchor
+Use id= anchors for table-of-contents links instead of <a name=/> (not default).
+.It Ar githubtags
+Allow underscore and dash in passed through element names (not default).
+.It Ar urlencodedanchor
+Use url-encoded chars for multibyte and nonalphanumeric chars rather than dots in toc links.
 .El
 .Pp
 As an example, the option
@@ -123,6 +143,13 @@ described in
 .Xr markdown 3 
 (the flag values are defined in
 .Pa mkdio.h )
+.It Fl n
+Don't write generated html.
+.It Fl o Pa file
+Write the generated html to 
+.Pa file .
+.It Fl S
+output <style> blocks.
 .It Fl V
 Show the version# and compile-time configuration data.
 .Pp
@@ -138,9 +165,6 @@ was configured to use the specified tabstop.
 .It Fl VV
 Show the version#, the compile-time configuration, and the
 run-time configuration.
-.It Fl o Pa file
-Write the generated html to 
-.Pa file .
 .It Fl t Ar text
 Use
 .Xr mkd_text 3
@@ -168,4 +192,4 @@ utility exits 0 on success, and >0 if an error occurs.
 .Xr mkd-extensions 7 .
 .Sh AUTHOR
 .An David Parsons
-.Pq Li orc@pell.chi.il.us
+.Pq Li orc@pell.portland.or.us
